# ExtractedFrames

./: pyproject.toml
extracted_frames/: main.py
