[project]
name = "extractedframes"
version = "0.1.0"
description = "CLI tool to extract frames from videos"
authors = [{ name = "Daniel", email = "you@example.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.12.0.88",
]

[project.scripts]
extract-frames = "extracted_frames.main:main"

[build-system]
requires = ["uv", "setuptools"]
build-backend = "setuptools.build_meta"